--- a/content/english/post/Ίσως_να_βρήκαμε_τον_πρώτο_πλανήτη_σε_άλλο_γαλαξία.md
+++ b/content/english/post/Ίσως_να_βρήκαμε_τον_πρώτο_πλανήτη_σε_άλλο_γαλαξία.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Ίσως_να_βρήκαμε_τον_πρώτο_πλανήτη_σε_άλλο_γαλαξία.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
