--- a/content/english/post/Βρέθηκαν_πολλαπλές_υπόγειες_λίμνες_στον_Άρη.md
+++ b/content/english/post/Βρέθηκαν_πολλαπλές_υπόγειες_λίμνες_στον_Άρη.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Βρέθηκαν_πολλαπλές_υπόγειες_λίμνες_στον_Άρη.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
