--- a/content/english/post/Η_μεγαλύτερη_φωτογραφία_του_κόσμου_απεικονίζει_ένα...κουνουπίδι.md
+++ b/content/english/post/Η_μεγαλύτερη_φωτογραφία_του_κόσμου_απεικονίζει_ένα...κουνουπίδι.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Η_μεγαλύτερη_φωτογραφία_του_κόσμου_απεικονίζει_ένα...κουνουπίδι.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
