--- a/content/english/post/Μάθαμε_ακριβώς_πόση_ακτινοβολία_έχει_στη_Σελήνη.md
+++ b/content/english/post/Μάθαμε_ακριβώς_πόση_ακτινοβολία_έχει_στη_Σελήνη.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Μάθαμε_ακριβώς_πόση_ακτινοβολία_έχει_στη_Σελήνη.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
