--- a/content/english/post/Οι_αστροναύτες_θα_έχουν_πλέον_το_δικό_τους_ψυγείο_στο_Διεθνή_Διαστημικό_Σταθμό.md
+++ b/content/english/post/Οι_αστροναύτες_θα_έχουν_πλέον_το_δικό_τους_ψυγείο_στο_Διεθνή_Διαστημικό_Σταθμό.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Οι_αστροναύτες_θα_έχουν_πλέον_το_δικό_τους_ψυγείο_στο_Διεθνή_Διαστημικό_Σταθμό.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
