--- a/content/english/post/Οι_πέντε_αποστολές_που_θα_ξετυλίξουν_το_μυστήριο_του_ηλιακού_διαστημικού_καιρού.md
+++ b/content/english/post/Οι_πέντε_αποστολές_που_θα_ξετυλίξουν_το_μυστήριο_του_ηλιακού_διαστημικού_καιρού.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Οι_πέντε_αποστολές_που_θα_ξετυλίξουν_το_μυστήριο_του_ηλιακού_διαστημικού_καιρού.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
