--- a/content/english/post/Πιθανά_σημάδια_ζωής_στην_ατμόσφαιρα_της_Αφροδίτης.md
+++ b/content/english/post/Πιθανά_σημάδια_ζωής_στην_ατμόσφαιρα_της_Αφροδίτης.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Πιθανά_σημάδια_ζωής_στην_ατμόσφαιρα_της_Αφροδίτης.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
