--- a/content/english/post/Οι_Ιάπωνες_θέλουν_να_καταγράψουν_τον_Φόβο_σε_8K.md
+++ b/content/english/post/Οι_Ιάπωνες_θέλουν_να_καταγράψουν_τον_Φόβο_σε_8K.md
@@ -4,7 +4,7 @@ date: 2020-10-12
 images:
   - "images/post/Οι_Ιάπωνες_θέλουν_να_καταγράψουν_τον_Φόβο_σε_8K.jpg"
 author: "AstroBot"
-categories: ["News"]
+categories: ["Ειδήσεις"]
 tags: ["unboxholics.com"]
 draft: false
 ---
