--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,50 +1,50 @@
 - id: continue_reading
-  translation: Continue Reading
+  translation: Μάθε Περισσότερα
 
 - id: search_placeholder
-  translation: Type & Hit Enter...
+  translation: Πληκτρολόγισε & πάτα το πλήκτρο Enter...
 
 - id: latest_article
-  translation: Latest Article
+  translation: Πρόσφατα Άρθρα
 
 - id: categories
-  translation: Categories
+  translation: Κατηγορίες
 
 - id: tags
   translation: Tags
 
 - id: search
-  translation: Search
+  translation: Αναζήτηση
 
 - id: date
-  translation: Date
+  translation: Ημερομηνία
 
 - id: posted_by
-  translation: Posted by this author
+  translation: Δημοσιεύτηκε από αυτόν τον συντάκτη
 
 - id: send
-  translation: Send Now
+  translation: Στείλε το τώρα
 
 - id: name
-  translation: Your Name
+  translation: Το όνομά σου
 
 - id: email 
-  translation: Your Email Address
+  translation: Το e-mail σου
 
 - id: message
-  translation: Your Message Here
+  translation: Το μύνημά σου
 
 - id: subscribe
-  translation: Subscribe now
+  translation: Γράψου τώρα
 
 - id: write_email
-  translation: Hate Forms? Write Us Email
+  translation: Μισείς τις φόρμες; Στείλε μου ένα e-mail
 
 - id: subscribe_newsletter
-  translation: Subscribe Newsletter
+  translation: Εγγραφείτε στο Newsletter
 
 - id: quick_links
-  translation: Quick Links
+  translation: Γρήγορα Links
 
 - id: social
-  translation: Social Links
+  translation: Κοινωνικά Δίκτυα
