--- a/content/english/post/Οι_επιστήμονες_ζητούν_σοβαρή_μελέτη_«μη_αναγνωρισμένων_εναέριων_φαινομένων».md
+++ b/content/english/post/Οι_επιστήμονες_ζητούν_σοβαρή_μελέτη_«μη_αναγνωρισμένων_εναέριων_φαινομένων».md
@@ -1,5 +1,5 @@
 ---
-title: "Οι επιστήμονες ζητούν σοβαρή μελέτη «μη αναγνωρισμένων εναέριων φαινομένων»"
+title: "Οι επιστήμονες κάνουν εκκληση για την μελέτη των «μη αναγνωρισμένων εναέριων φαινομένων»"
 date: 2020-10-12T14:44:21+02:00
 images:
   - "images/post/Scientists_call_for_serious_study_of_'unidentified_aerial_phenomena'.jpg"
@@ -9,6 +9,6 @@ tags: ["space.com"]
 draft: false
 ---
 
-Υπάρχει μια αυξανόμενη έκκληση για &quot;μη αναγνωρισμένα εναέρια φαινόμενα&quot; να μελετηθούν επιστημονικά, ίσως ακόμη και να χρησιμοποιούν δορυφόρους για να αναζητήσουν πιθανά μελλοντικά γεγονότα.
+Δεν χρειάζεται να ψάχνετε μόνο για εξωγήινους ή UFO.
 
 Διαβάστε περισσότερα: https://www.space.com/unidentified-aerial-phenomena-scientific-scrutiny
