--- a/content/english/post/Έρευνα__Υπάρχουν_24_πλανήτες_με_ευνοϊκότερες_συνθήκες_ζωής_από_τη_Γη.md
+++ b/content/english/post/Έρευνα__Υπάρχουν_24_πλανήτες_με_ευνοϊκότερες_συνθήκες_ζωής_από_τη_Γη.md
@@ -9,6 +9,6 @@ tags: ["sputniknews.gr"]
 draft: false
 ---
 
-"Πλανήτης"
+Σύμφωνα με την μελέτη, οι πλανήτες φέρεται να έχουν τις κατάλληλες συνθήκες για την ύπαρξη ζωής, αλλά δεν πρόκειται να επισκεφτούμε κανέναν από αυτούς σύντομα, καθώς βρίσκονται 100 έτη φωτός μακριά.
 
 Διαβάστε περισσότερα: https://sputniknews.gr/astronomia/202010108458917-ereuna-Yparhoun-24-planites-me-eunoikoteres-synthikes-zois-apo-ti-gi/
