--- a/content/english/post/Οι_μαύρες_τρύπες_κάνουν_περίπλοκες_βαρυτικές_κυματώσεις_καθώς_συγχωνεύονται.md
+++ b/content/english/post/Οι_μαύρες_τρύπες_κάνουν_περίπλοκες_βαρυτικές_κυματώσεις_καθώς_συγχωνεύονται.md
@@ -9,6 +9,6 @@ tags: ["universetoday.com"]
 draft: false
 ---
 
-Τα βαρυτικά κύματα παράγονται από όλες τις κινούμενες μάζες, από την ταλάντωση της Γης γύρω από τον Ήλιο έως την κίνησή σας καθώς πηγαίνετε στην καθημερινή σας ζωή. Προς το παρόν, αυτά τα κύματα βαρύτητας είναι πολύ μικρά για να παρατηρηθούν. Τα παρατηρητήρια βαρύτητας όπως το LIGO και το VIRGO μπορούν να δουν μόνο τα δυνατά βαρυτικά κύματα που παράγονται από τη συγχώνευση αστρικών μαζών οπών. Το χτύπημα μιας βαρυτικής συγχώνευσης είναι σαφές. Πίστωση: LIGO / Caltech / MIT / Πανεπιστήμιο του Σικάγου (Ben Farr) Συνέχεια ανάγνωσης «Οι Μαύρες τρύπες κάνουν σύνθετες βαρυτικές κυματώσεις καθώς συγχωνεύονται»
+Τα βαρυτικά κύματα παράγονται από ό,τιδήποτε έχει μάζα. Από την ταλάντωση της Γης γύρω από τον Ήλιο, έως την κίνησή σας καθώς πηγαίνετε στο γραφείο. Προς το παρόν, αυτά τα βαρυτικά κύματαείναι πολύ μικρά για να παρατηρηθούν. Τα παρατηρητήρια βαρύτητας όπως το LIGO και το VIRGO μπορούν να δουν μόνο τα μεγάλα βαρυτικά κύματα που παράγονται από τη συγχώνευση μαύρων τρυπών αστρικής μάζας.
 
 Διαβάστε περισσότερα: https://www.universetoday.com/148282/black-holes-make-complex-gravitational-wave-chirps-as-they-merge/
