--- a/content/english/post/Οι_αστρονόμοι_βλέπουν_ένα_αστέρι_«μακαρονισμένο»_από_μια_μαύρη_τρύπα.md
+++ b/content/english/post/Οι_αστρονόμοι_βλέπουν_ένα_αστέρι_«μακαρονισμένο»_από_μια_μαύρη_τρύπα.md
@@ -9,6 +9,6 @@ tags: ["earthsky.org"]
 draft: false
 ---
 
-Οι αστρονόμοι έχουν εντοπίσει μια σπάνια έκρηξη φωτός από ένα αστέρι που διαλύεται από μια υπερμεγέθη μαύρη τρύπα. Το φαινόμενο - γνωστό ως επεισόδιο παλιρροιακής διαταραχής - είναι η πλησιέστερη τέτοια φωτοβολίδα που έχει καταγραφεί μέχρι σήμερα σε πάνω από 215 εκατομμύρια έτη φωτός από τη Γη.
+Οι αστρονόμοι έχουν εντοπίσει μια σπάνια έκρηξη φωτός από ένα αστέρι που διαλύεται από μια υπερμεγέθη μαύρη τρύπα. Το φαινόμενο - γνωστό ως επεισόδιο παλιρροιακής διαταραχής - είναι η πλησιέστερη τέτοια έκλαμψη που έχει καταγραφεί μέχρι σήμερα σε πάνω από 215 εκατομμύρια έτη φωτός από τη Γη.
 
 Διαβάστε περισσότερα: https://earthsky.org/space/star-spaghettified-by-black-hole-at2019qiz
