--- a/content/english/post/Παρακολουθήστε_ζωντανά_@_12__30_μ.μ._ET_σήμερα__Ο_επικεφαλής_της_NASA_συζητά_το_πρόγραμμα_Artemis_moon.md
+++ b/content/english/post/Παρακολουθήστε_ζωντανά_@_12__30_μ.μ._ET_σήμερα__Ο_επικεφαλής_της_NASA_συζητά_το_πρόγραμμα_Artemis_moon.md
@@ -1,5 +1,5 @@
 ---
-title: "Παρακολουθήστε ζωντανά @ 12: 30 μ.μ. ET σήμερα: Ο επικεφαλής της NASA συζητά το πρόγραμμα Artemis moon"
+title: "Παρακολουθήστε ζωντανά 19:30 σήμερα: Ο επικεφαλής της NASA συζητά το πρόγραμμα Artemis moon"
 date: 2020-10-13T17:45:06+02:00
 images:
   - "images/post/Watch_live_@12_30_pm_ET_today__NASA_chief_discusses_Artemis_moon_program_.jpg"
