--- a/content/english/post/Μοναδικές_εικόνες_εκτόξευσης_πυραύλου_όπως_φαίνεται_από_το_διάστημα.md
+++ b/content/english/post/Μοναδικές_εικόνες_εκτόξευσης_πυραύλου_όπως_φαίνεται_από_το_διάστημα.md
@@ -2,7 +2,7 @@
 title: "Μοναδικές εικόνες εκτόξευσης πυραύλου όπως φαίνεται από το διάστημα"
 date: 2020-10-13T23:28:48+02:00
 images:
-  - "images/post/Μοναδικές_εικόνες_εκτόξευσης_πυραύλου_όπως_φαίνεται_από_το_διάστημα.jpg?v=20201010145554"
+  - "images/post/Μοναδικές_εικόνες_εκτόξευσης_πυραύλου_όπως_φαίνεται_από_το_διάστημα.jpg"
 author: "AstroBot"
 categories: ["Ειδήσεις"]
 tags: ["news.gr"]
