--- a/content/english/post/Οι_γαλαξίες_του_Γαλαξία_και_της_Ανδρομέδας_συγχωνεύονται_ήδη.md
+++ b/content/english/post/Οι_γαλαξίες_του_Γαλαξία_και_της_Ανδρομέδας_συγχωνεύονται_ήδη.md
@@ -1,5 +1,5 @@
 ---
-title: "Οι γαλαξίες του Γαλαξία και της Ανδρομέδας συγχωνεύονται ήδη"
+title: "Ο Γαλαξίας μας και η Ανδρομέδα ξεκίνησαν ήδη να συγχωνεύονται"
 date: 2020-10-15T14:26:47+02:00
 images:
   - "images/post/Milky_Way_and_Andromeda_galaxies_are_already_merging.jpg"
