--- a/content/english/post/Οι_αστρονόμοι_αναφέρουν_ότι_έχουν_εντοπίσει_τη_γλυκίνη_αμινοξέος_στην_ατμόσφαιρα_της_Αφροδίτης.md
+++ b/content/english/post/Οι_αστρονόμοι_αναφέρουν_ότι_έχουν_εντοπίσει_τη_γλυκίνη_αμινοξέος_στην_ατμόσφαιρα_της_Αφροδίτης.md
@@ -9,6 +9,6 @@ tags: ["universetoday.com"]
 draft: false
 ---
 
-Αισθάνεται ότι όλα τα μάτια βλέπουν την Αφροδίτη αυτές τις μέρες; Η ανακάλυψη της πιθανής φωσφίνης βιοδείκτη στην ανώτερη ατμόσφαιρα του πλανήτη τον περασμένο μήνα συγκέντρωσε μεγάλη προσοχή, όπως θα έπρεπε. Υπάρχει ακόμα κάποια αβεβαιότητα σχετικά με το τι σημαίνει η ανακάλυψη φωσφίνης. Τώρα μια ομάδα ερευνητών ανακάλυψε το αμινοξύ γλυκίνη στην ατμόσφαιρα της Αφροδίτης. Συνεχίστε να διαβάζετε «Οι αστρονόμοι αναφέρουν ότι έχουν εντοπίσει την αμινοξική γλυκίνη στην ατμόσφαιρα της Αφροδίτης»
+Αισθάνεστε ότι όλα τα μάτια είναι καρφωμένα στην Αφροδίτη αυτές τις μέρες; Η ανακάλυψη της πιθανής φωσφίνης (βιοδείκτης) στην ανώτερη ατμόσφαιρα του πλανήτη τον περασμένο μήνα συγκέντρωσε μεγάλη προσοχή, όπως θα ήταν αναμενόμενο. Υπάρχει ακόμα κάποια αβεβαιότητα σχετικά με το τι σημαίνει η ανακάλυψη φωσφίνης. Τώρα μια ομάδα ερευνητών ανακάλυψε το αμινοξύ γλυκίνη στην ατμόσφαιρα της Αφροδίτης. Συνεχίστε να διαβάζετε «Οι αστρονόμοι αναφέρουν ότι έχουν εντοπίσει την αμινοξική γλυκίνη στην ατμόσφαιρα της Αφροδίτης»
 
 Διαβάστε περισσότερα: https://www.universetoday.com/148345/astronomers-report-theyve-detected-the-amino-acid-glycine-in-the-atmosphere-of-venus/
