--- a/content/english/post/Φτου__2_μεγάλα_κομμάτια_σκουπιδιών_διαστημικών_ζουμ_περνάνε_με_ασφάλεια_μεταξύ_τους_σε_κοντινή_απόσταση.md
+++ b/content/english/post/Φτου__2_μεγάλα_κομμάτια_σκουπιδιών_διαστημικών_ζουμ_περνάνε_με_ασφάλεια_μεταξύ_τους_σε_κοντινή_απόσταση.md
@@ -1,5 +1,5 @@
 ---
-title: "Φτου! 2 μεγάλα κομμάτια σκουπιδιών διαστημικών ζουμ περνάνε με ασφάλεια μεταξύ τους σε κοντινή απόσταση"
+title: "Δυ μεγάλα κομμάτια διαστημικών σκουπιδιών περνάνε με ασφάλεια μεταξύ τους σε κοντινή απόσταση"
 date: 2020-10-16T05:40:47+02:00
 images:
   - "images/post/Phew__2_big_hunks_of_space_junk_zoom_safely_past_each_other_in_near_miss.jpg"
