--- a/content/english/post/Η_Γη_μόλις_είχε_τον_πιο_ζεστό_Σεπτέμβριο.md
+++ b/content/english/post/Η_Γη_μόλις_είχε_τον_πιο_ζεστό_Σεπτέμβριο.md
@@ -9,6 +9,6 @@ tags: ["space.com"]
 draft: false
 ---
 
-Κάθε χρόνο, ένας πλανήτης θέρμανσης καταστρέφει τα αρχεία θερμότητας.
+Κάθε χρόνο, τα πράγματα γίνονται ολοένα και χειρότερα για τις συνθήκες ζωής στον πλανήτη μας.
 
 Διαβάστε περισσότερα: https://www.space.com/september-worlds-hottest-record.html
